--- a/employee-manager-web/src/main/webapp/resources/css/index.css
+++ b/employee-manager-web/src/main/webapp/resources/css/index.css
@@ -1,5 +1,24 @@
 #contentDiv {
-	margin: auto;
-	width: 60%;
-	padding: 10px;
+    margin: auto;
+    width: 60%;
+    padding: 10px;
+}
+
+#loginContent {
+    position: absolute;
+    width: 300px;
+    height: 200px;
+    z-index: 15;
+    top: 45%;
+    left: 50%;
+    margin: -100px 0 0 -150px;
+}
+
+#registerContent {
+    position: absolute;
+    width: 1300px;
+    height: 300px;
+    top: 30%;
+    left: 42%;
+    margin: -100px 0 0 -150px;
 }
