--- a/employee-manager-web/src/main/webapp/resources/css/index.css
+++ b/employee-manager-web/src/main/webapp/resources/css/index.css
@@ -27,11 +27,10 @@
 	float: right;
 	padding-left: 1490px;
 	padding-top: 5px;
-
 }
 
-.headerName .nav nav-pills nav-stacked{
-
+.headerName .nav nav-pills nav-stacked {
+	
 }
 
 .headerName .nav>li>a:hover, .nav>li>a:focus {
@@ -66,17 +65,22 @@
 	white-space: nowrap;
 	background-color: transparent;
 	border: none;
-	
 }
 
-.headerName .dropdown-menu>li>a:hover{
-	color:#2fa4e7;
-}
-.headerName ul.dropdown-menu{
-	padding-left:1px;
-	min-width:5px;
+.headerName .dropdown-menu>li>a:hover {
+	color: #2fa4e7;
 }
 
-.headerName .open > .dropdown-menu{
-	margin-left:60px;
+.headerName ul.dropdown-menu {
+	padding-left: 1px;
+	min-width: 5px;
+	margin-left: 60px;
+}
+
+.headerName .open>.dropdown-menu {
+	margin-left: 70px;
+}
+
+.headerName ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block;    
 }
